--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.BasicCourseAll"
         tools:targetApi="31">
         <activity
+            android:name=".Guess1A2BWelcomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Guess1A2BActivity"
+            android:exported="false" />
+        <activity
             android:name=".LotteryActivity"
             android:exported="false" />
         <activity
