--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:theme="@style/Theme.BasicCourseAll"
         tools:targetApi="31">
         <activity
+            android:name=".SignActivity"
+            android:exported="false"
+            android:screenOrientation="landscape"/>
+        <activity
             android:name=".Guess1A2BWelcomeActivity"
             android:exported="false" />
         <activity
