--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,12 @@
         android:theme="@style/Theme.BasicCourseAll"
         tools:targetApi="31">
         <activity
+            android:name=".StopWatchActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignActivity"
             android:exported="false"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".Guess1A2BWelcomeActivity"
             android:exported="false" />
