1.Add ball game layout and drawable resource file 2.Set background to ballgame_bg.png

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:theme="@style/Theme.BasicCourseAll"
         tools:targetApi="31">
         <activity
+            android:name=".BallGameActivity"
+            android:exported="false"
+            android:screenOrientation="landscape"/>
+        <activity
             android:name=".StopWatchActivity"
             android:exported="false" />
         <activity
